Update YoutubeWebView.java
fix next button